<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/lifecost" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/countries_warning"
        android:textAlignment="center"
        android:textColor="#EF6C00"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:text="@string/country_label"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_country_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.lifecost.fragments.CountrySpinnerFragment"
        tools:layout="@layout/fragment_country_spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:text="@string/city_label"/>

    <EditText
        android:id="@+id/city_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_hint"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/check_button_label"/>



</LinearLayout>